# app-launch-bar

./: .gitignore  CMakeLists.txt
cmake/modules/: FindSDL2.cmake
scripts/engine/: Window.cpp  Window.h
scripts/engine/renderer/: Colour.h  Renderer.cpp  Renderer.h
scripts/engine/renderer/fonts/: FontRenderer.cpp  FontRenderer.h
scripts/game/: Manager.cpp  Manager.h
scripts/util/: ImageReader.cpp  ImageReader.h
